Tue Mar 19 18:51:50 CEST 2002 <Daniel.Diaz@inria.fr>
	
	* fix a problem with gcc 3.0.x which always uses ebp in main()
	* use -march=xxx gcc option instead of -mxxx for ix86
	
Tue Jan 15 19:26:26 CEST 2002 <Daniel.Diaz@inria.fr>

	* gplc now passes -L option to ld in the order of apparition
	* gplc accepts meta-characters %p, %d,... in output file names

Tue Jan  8 16:51:48 CEST 2002 <Daniel.Diaz@inria.fr>

	* include additional patch for sockets under win32 - due to:
	  Brent Fulgham <brent.fulgham@xpsystems.com>

Thu Dec 20 16:17:00 CEST 2001 <Daniel.Diaz@inria.fr>

	* re-write Windows GUI Console in pure Win32 (no more MFC)
	* adapt configure.in to work with autoconf 2.52

Thu Dec 13 12:09:36 CEST 2001 <Daniel.Diaz@inria.fr>

	* add Prolog flag back_quotes and values {atom,chars,codes}_no_escape
	* use a terminal recusion in FD arithmetic normalization

Wed Dec 12 11:04:57 CEST 2001 <Daniel.Diaz@inria.fr>

	* fix bug in bind_variables/2, reported by: 
	  Bowie Owens <owe043@phi-cq.vic.cmis.csiro.au>

Tue Dec 11 18:25:19 CEST 2001 <Daniel.Diaz@inria.fr>

	* modify Ma2Asm mappers to use Y_OFFSET (from ENVIR_STATIC_SIZE)
	* fix some bugs in the Wam debugger
	
Fri Dec  7 19:01:02 CEST 2001 <Daniel.Diaz@inria.fr>

	* add several options to the top-level to execute goals
	* add an environment variable LINEDIT to control linedit options
	* fix bug in linedit on \b in start of line (using ANSI ESC sequence)
	* now linedit works with XFree keyboard encoding

Tue Dec  4 20:29:00 CEST 2001 <Daniel.Diaz@inria.fr>

	* simplify linedit: only apply to stdin
	* now linedit is reentrant
	* rename built-in get_code_no_echo/1-2 by get_key_no_echo/1-2
	* add built-in get_key/1-2
	* use get_key/1-2 in the top_level + debugger (thus with echo)
	* improve the top-level Ctrl+C manager

Mon Dec  3 18:13:16 CEST 2001 <Daniel.Diaz@inria.fr>

	* fix bux on linux configured with --disable-regs
	* add pipe to pl2wam stdin when called by consult/1
