@@ -3,7 +3,7 @@ do_diff() {
     diff --ignore-space-change -I '% date' -I '% compiler' -I '% time' $1 $2
 }
 
-pl_files='pl2wam read_file bip_list syn_sugar internal code_gen inst_codif first_arg indexing wam_emit'
+pl_files='pl2wam read_file bip_list syn_sugar internal code_gen reg_alloc inst_codif first_arg indexing wam_emit'
 
 
 files=${*:-$pl_files}
