@@ -1,3 +1,7 @@
+Fri Mar 22 11:31:52 CEST 2002 <Daniel.Diaz@inria.fr>
+
+	* fix a problem under sparc/solaris using mmap (adding MAP_FIXED)
+
 Tue Mar 19 18:51:50 CEST 2002 <Daniel.Diaz@inria.fr>
 	
 	* fix a problem with gcc 3.0.x which always uses ebp in main()
